# claude-automation-template

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .template-version  CHANGELOG.md  CLAUDE.md  README.md  bad-format.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.sh  test-dummy.txt
.claude/: README.md  settings.json
.claude/hooks/: bash-antipattern-check.sh  ci-feedback-async.sh  ci-feedback.sh  lib-checks.sh  pr-creation-reminder.sh  pre-push-check.sh  safe-launch-parse.py  safe-launch.sh  session-setup.sh  verify-ci-on-stop.sh  verify_ci.py
.claude/skills/: conflict-resolution.md  pr-creation.md  pre-pr-checklist.md
.github/: dependabot.yml
.github/prompts/: security-vulnerability-scan.md
.github/rulesets/: main-branch-protection.json
.github/scripts/: assemble-changelog.mjs  check-token-scope.sh  fetch-security-report.sh  phone-home-extract.js  promote-changelog.mjs  release-prep-bump-version.sh  release-prep.sh  run-hook-lifecycle.sh  tag-release.sh  template-sync.sh  track_ci_failures.py  validate-config.sh  version-bump.sh
.hooks/: commit-msg  lint-skills.sh  pre-commit
changelog.d/: README.md
org-bootstrap/: README.md  bootstrap.sh  config.example.sh
scripts/: doctor.sh
tests/: _helpers.py  conftest.py  test_assemble_changelog.py  test_check_symlinks.py  test_check_token_scope.py  test_claude_hooks.py  test_lint_skills.py  test_promote_changelog.py  test_required_env.py  test_script_configured.py  test_template_sync.py  test_track_ci_failures.py  test_validate_config.py  test_verify_ci.py  test_version_sync.py
(+33 files in other folders)
